--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -11701,7 +11701,7 @@ body:before {
   bottom: 0;
   left: 0;
   opacity: 0.3;
-  background: url("/img/cute.webp") repeat;
+  background: url("/img/th-4.jepg") repeat;
 }
 .navbar {
   background-color: rgba(255,255,255,0.7);
